<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputDonorId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="7">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/default_search_input_message"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <ImageButton
        android:id="@+id/btnCancelSearch"
        style="@style/AppTheme.Icons"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_weight="1"
        android:contentDescription="@string/ic_cancel_description"
        android:src="@drawable/ic_cancel" />

    <ImageButton
        android:id="@+id/btnSearch"
        style="@style/AppTheme.Icons"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_weight="1"
        android:contentDescription="@string/ic_search_description"
        android:src="@drawable/ic_search" />
</LinearLayout>